Fixed issue with buttons hidden by invisible div

--- a/src/components/Saloon/style.module.scss
+++ b/src/components/Saloon/style.module.scss
@@ -6,14 +6,13 @@
 
 .legend{
     position: absolute;
-    width: 100%;
     display: flex;  
     flex-direction: column;
     align-items: right;
     justify-content: center;
     transform: rotateY(0deg) rotate(90deg);
-    left: 5px;
-    margin-top: 150px;
+    left: 240px;
+    margin-top: -100px;
     gap: 70px;
     @media screen and (min-width: $medium-screen) {
         margin-top: 250px;
@@ -30,7 +29,7 @@
 .screen{
     width: 150px;
     height: 30px;
-    margin-left: 250px;
+    margin-left: 200px;
     margin-top: 40px;
     align-items: center;
     justify-content: center;
@@ -89,7 +88,8 @@
     transform: rotateY(0deg) rotate(-90deg);
     color: $text-light;
     margin-left: 27px;
-    margin-top: 15px;
+    margin-top: 8px;
+    text-align: center;
 }
 .legendText_selected{
     position: absolute;
